test/files/neg/t630.check
t630.scala:20: error: overriding val foo: Req2 (defined in trait Bar);
 object foo has incompatible type
        object foo extends Req1
               ^
one error found
